--- a/Jupyter_Notebooks/OSTL_FMO.ipynb
+++ b/Jupyter_Notebooks/OSTL_FMO.ipynb
@@ -105,7 +105,7 @@
    "source": [
     "### 2. Training with preparation of training data and optimization of the CNN model\n",
     "\n",
-    "We provide 20 trajectories in ```examples/fmo_data``` for the sake of demonstration. Each trajectory is propagated with LTLME method upto ```t= 10 ps``` with time-step ```dt = 0.005```. "
+    "We provide 20 trajectories in ```Jupyter_Notebooks/fmo_data``` for the sake of demonstration. Each trajectory is propagated with LTLME method upto ```t= 10 ps``` with time-step ```dt = 0.005```. "
    ]
   },
   {
