--- a/Jupyter_Notebooks/AIQD_SB.ipynb
+++ b/Jupyter_Notebooks/AIQD_SB.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "### 2. Training with preparation of training data and optimization of the CNN model\n",
     "\n",
-    "We provide 20 trajectories in ```examples/sb_data``` for the sake of demonstration. Each trajectory is propagated with HEOM method upto ```t= 20 (a.u.)``` with time-step ```dt = 0.05```. "
+    "We provide 20 trajectories in ```Jupyter_Notebooks/sb_data``` for the sake of demonstration. Each trajectory is propagated with HEOM method upto ```t= 20 (a.u.)``` with time-step ```dt = 0.05```. "
    ]
   },
   {
