--- a/Jupyter_Notebooks/KRR_SB.ipynb
+++ b/Jupyter_Notebooks/KRR_SB.ipynb
@@ -116,7 +116,7 @@
     "$$\n",
     "To train a KRR model, we use MLatom package (http://mlatom.com/) in the backend.\n",
     "\n",
-    "For the sake of demonstration, we will use the few trajectories provided in the ```examples/sb_data``` folder. Here we take short trajectory of time-length $t_m = 4.0$ (a.u.) as an input-length. In MLQD, we pass it as ```'xlength': 81```."
+    "For the sake of demonstration, we will use the few trajectories provided in the ```Jupyter_Notebooks/sb_data``` folder. Here we take short trajectory of time-length $t_m = 4.0$ (a.u.) as an input-length. In MLQD, we pass it as ```'xlength': 81```."
    ]
   },
   {
