--- a/Jupyter_Notebooks/AIQD_FMO.ipynb
+++ b/Jupyter_Notebooks/AIQD_FMO.ipynb
@@ -112,7 +112,7 @@
     "        'time_step': 0.005,             # float: Time-step for time-propagation. Default values are 0.05 (spin-boson model) and 0.005ps for FMO complex.\n",
     "        'QDmodel': 'createQDmodel',     # string: createQDmodel, the dafault option is useQDmodel\n",
     "        'QDmodelType': 'AIQD',          # string: Type of model. The default option is OSTL\n",
-    "        'prepInput' : True,             # str: Prepare input files from the data (Default False)\n",
+    "        'prepInput' : 'True',           # str: Prepare input files from the data (Default False)\n",
     "        'XfileIn': 'x_data',            # str: (Optional, npy file) The prepared X file will be saved at the provided file name \n",
     "        'YfileIn': 'y_data',            # str: (Optional, npy file) The prepared Y file will be saved at the provided file name \n",
     "        'numLogf': 2,                  # int: Number of Logistic function for the normalization of time dimension. Default value is 1.0.    \n",
@@ -124,7 +124,7 @@
     "        'lambNorm': 520,                # float: Normalizer for System-bath coupling strength. Default value is 520 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models \n",
     "        'tempNorm': 500,                # float: Normalizer for temperature. Default value is 510 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models.\n",
     "        'systemType': 'FMO',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
-    "        'hyperParam': True,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'hyperParam': 'True',           # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # Int: Patience for early stopping in CNN training \n",
     "        'dataPath': 'fmo_data',          # str: Data path\n",
     "        'QDmodelOut': 'AIQD_FMO_model'   # str: (Optional), providing a name to save the model at\n",
@@ -154,7 +154,7 @@
     "        'time_step': 0.005,             # float: Time-step for time-propagation. Default values are 0.05 (spin-boson model) and 0.005ps for FMO complex.\n",
     "        'QDmodel': 'createQDmodel',     # string: createQDmodel, the dafault option is useQDmodel\n",
     "        'QDmodelType': 'AIQD',          # string: Type of model. The default option is OSTL\n",
-    "        'prepInput' : True,             # str: Prepare input files from the data (Default False)\n",
+    "        'prepInput' : 'True',           # str: Prepare input files from the data (Default False)\n",
     "        'XfileIn': 'x_data',            # str: (Optional, npy file) The prepared X file will be saved at the provided file name \n",
     "        'YfileIn': 'y_data',            # str: (Optional, npy file) The prepared Y file will be saved at the provided file name \n",
     "        'numLogf': 2,                  # int: Number of Logistic function for the normalization of time dimension. Default value is 1.0.    \n",
@@ -166,10 +166,10 @@
     "        'lambNorm': 520,                # float: Normalizer for System-bath coupling strength. Default value is 520 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models \n",
     "        'tempNorm': 500,                # float: Normalizer for temperature. Default value is 510 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models.\n",
     "        'systemType': 'FMO',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
-    "        'hyperParam': False,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'hyperParam': 'False',          # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # Int: Patience for early stopping in CNN training \n",
-    "        'dataPath': 'fmo_data',          # str: Data path\n",
-    "        'QDmodelOut': 'AIQD_FMO_model'   # str: (Optional), providing a name to save the model at\n",
+    "        'dataPath': 'fmo_data',         # str: Data path\n",
+    "        'QDmodelOut': 'AIQD_FMO_model'  # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "quant_dyn(**param)"
    ]
@@ -198,7 +198,7 @@
     "        'systemType': 'FMO',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
     "        'XfileIn': 'x_data',            # str: (Not Optional, npy file) The X file \n",
     "        'YfileIn': 'y_data',            # str: (Not Optional, npy file) The Y file  \n",
-    "        'hyperParam': False,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'hyperParam': 'False',             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # Int: Patience for early stopping in CNN training\n",
     "        'QDmodelOut': 'AIQD_FMO_model'   # str: (Optional), providing a name to save the model at\n",
     "}\n",
