--- a/Jupyter_Notebooks/AIQD_SB.ipynb
+++ b/Jupyter_Notebooks/AIQD_SB.ipynb
@@ -96,10 +96,10 @@
     "param={ \n",
     "        'n_states': 2,                  # int:  Number of states (SB) or sites (FMO), default 2 (SB) and 7 (FMO).\n",
     "        'time': 20,                     # float: Propagation time in picoseconds (ps) for FMO complex and in (a.u.) for spin-boson model\n",
-    "        'time_step': 0.05,             # float: Time-step for time-propagation. Default values are 0.05 (spin-boson model) and 0.005ps for FMO complex.\n",
+    "        'time_step': 0.05,              # float: Time-step for time-propagation. Default values are 0.05 (spin-boson model) and 0.005ps for FMO complex.\n",
     "        'QDmodel': 'createQDmodel',     # string: createQDmodel, the dafault option is useQDmodel\n",
     "        'QDmodelType': 'AIQD',          # string: Type of model. The default option is OSTL\n",
-    "        'prepInput' : True,             # str: Prepare input files from the data (Default False)\n",
+    "        'prepInput' : 'True',           # str: Prepare input files from the data (Default False)\n",
     "        'XfileIn': 'x_data',            # str: (Optional, npy file) The prepared X file will be saved at the provided file name \n",
     "        'YfileIn': 'y_data',            # str: (Optional, npy file) The prepared Y file will be saved at the provided file name \n",
     "        'numLogf': 10,                  # int: Number of Logistic function for the normalization of time dimension. Default value is 1.0.    \n",
@@ -109,11 +109,11 @@
     "        'LogCd' : 1.0,                  # float: Coefficient \"d\" in the logistic function, default values is 1.0 (you may not provide it)\n",
     "        'energyNorm': 1.0,              # float: Normalizer for energy difference. Default value is 1.0 (adopted in the provided trained models)\n",
     "        'DeltaNorm': 1.0,               # float: Normalizer for Delta. Default value is 1.0 (adopted in the provided trained models)\n",
-    "        'gammaNorm': 10,               # float: Normalizer for Characteristic frequency. Default value is 500 in the case of FMO complex and 10 in the case of spin-boson model. The same values are also adopted in the provided trained models  \n",
+    "        'gammaNorm': 10,                # float: Normalizer for Characteristic frequency. Default value is 500 in the case of FMO complex and 10 in the case of spin-boson model. The same values are also adopted in the provided trained models  \n",
     "        'lambNorm': 1.0,                # float: Normalizer for System-bath coupling strength. Default value is 520 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models \n",
     "        'tempNorm': 1.0,                # float: Normalizer for temperature. Default value is 510 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models.\n",
-    "        'systemType': 'SB',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
-    "        'hyperParam': True,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
+    "        'hyperParam': 'True',           # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # Int: Patience for early stopping in CNN training \n",
     "        'dataPath': 'sb_data',          # str: Data path\n",
     "        'QDmodelOut': 'AIQD_SB_model'   # str: (Optional), providing a name to save the model at\n",
@@ -140,10 +140,10 @@
     "param={ \n",
     "        'n_states': 2,                  # int:  Number of states (SB) or sites (FMO), default 2 (SB) and 7 (FMO).\n",
     "        'time': 20,                     # float: Propagation time in picoseconds (ps) for FMO complex and in (a.u.) for spin-boson model\n",
-    "        'time_step': 0.05,             # float: Time-step for time-propagation. Default values are 0.05 (spin-boson model) and 0.005ps for FMO complex.\n",
+    "        'time_step': 0.05,              # float: Time-step for time-propagation. Default values are 0.05 (spin-boson model) and 0.005ps for FMO complex.\n",
     "        'QDmodel': 'createQDmodel',     # string: createQDmodel, the dafault option is useQDmodel\n",
     "        'QDmodelType': 'AIQD',          # string: Type of model. The default option is OSTL\n",
-    "        'prepInput' : True,             # str: Prepare input files from the data (Default False)\n",
+    "        'prepInput' : 'True',           # str: Prepare input files from the data (Default False)\n",
     "        'XfileIn': 'x_data',            # str: (Optional, npy file) The prepared X file will be saved at the provided file name \n",
     "        'YfileIn': 'y_data',            # str: (Optional, npy file) The prepared Y file will be saved at the provided file name \n",
     "        'numLogf': 10,                  # int: Number of Logistic function for the normalization of time dimension. Default value is 1.0.    \n",
@@ -153,11 +153,11 @@
     "        'LogCd' : 1.0,                  # float: Coefficient \"d\" in the logistic function, default values is 1.0 (you may not provide it)\n",
     "        'energyNorm': 1.0,              # float: Normalizer for energy difference. Default value is 1.0 (adopted in the provided trained models)\n",
     "        'DeltaNorm': 1.0,               # float: Normalizer for Delta. Default value is 1.0 (adopted in the provided trained models)\n",
-    "        'gammaNorm': 10,               # float: Normalizer for Characteristic frequency. Default value is 500 in the case of FMO complex and 10 in the case of spin-boson model. The same values are also adopted in the provided trained models  \n",
+    "        'gammaNorm': 10,                # float: Normalizer for Characteristic frequency. Default value is 500 in the case of FMO complex and 10 in the case of spin-boson model. The same values are also adopted in the provided trained models  \n",
     "        'lambNorm': 1.0,                # float: Normalizer for System-bath coupling strength. Default value is 520 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models \n",
     "        'tempNorm': 1.0,                # float: Normalizer for temperature. Default value is 510 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models.\n",
-    "        'systemType': 'SB',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
-    "        'hyperParam': False,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
+    "        'hyperParam': 'False',            # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # Int: Patience for early stopping in CNN training \n",
     "        'dataPath': 'sb_data',          # str: Data path\n",
     "        'QDmodelOut': 'AIQD_SB_model'   # str: (Optional), providing a name to save the model at\n",
@@ -187,12 +187,12 @@
     "        'n_states': 2,                  # int:  Number of states (SB) or sites (FMO), default 2 (SB) and 7 (FMO).\n",
     "        'QDmodel': 'createQDmodel',     # str: createQDmodel, the dafault option is useQDmodel\n",
     "        'QDmodelType': 'AIQD',          # str: Type of model. The default option is OSTL\n",
-    "        'systemType': 'SB',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
+    "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
     "        'XfileIn': 'x_data',            # str: (Not Optional, npy file) The X file \n",
     "        'YfileIn': 'y_data',            # str: (Not Optional, npy file) The X file \n",
-    "        'hyperParam': False,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'hyperParam': 'False',          # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
-    "        'QDmodelOut': 'AIQD_SB_model'  # str: (Optional), providing a name to save the model at\n",
+    "        'QDmodelOut': 'AIQD_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "quant_dyn(**param)"
    ]
