--- a/Jupyter_Notebooks/KRR_SB.ipynb
+++ b/Jupyter_Notebooks/KRR_SB.ipynb
@@ -173,14 +173,14 @@
     "param={ \n",
     "        'QDmodel': 'createQDmodel',     # str: create QD model. The dafault option is useQDmodel\n",
     "        'QDmodelType': 'KRR',           # str: The type of model. Here KRR and the default option is OSTL\n",
-    "        'prepInput' : True,             # str: Prepare input files from the data (Default False)\n",
+    "        'prepInput' : 'True',           # str: Prepare input files from the data (Default False)\n",
     "        'XfileIn': 'x_train',           # str: (Optional, txt file) The prepared X file will be saved at the provided file name \n",
     "        'YfileIn': 'y_train',           # str: (Optional, txt file) The prepared Y file will be saved at the provided file name\n",
     "        'dataPath': 'sb_data/' ,        # str: Data path\n",
     "        'dataCol': 1,                   # int: Default is 1, we may have multiple columns in our data files, mention a single column (KRR model works only for single output)\n",
     "        'dtype': 'real',                # str: Default is real. If the data in complex and if we pass 'real', it will prepare data only for real part and if we pass 'imag' is mentioned, only imaginary data will be considered. \n",
     "        'xlength': 81,                  # int:  Default is 81. Length of the short trajectory which will be used as an input\n",
-    "        'hyperParam': True,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default values)\n",
+    "        'hyperParam': 'True',           # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default values)\n",
     "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
     "        'QDmodelOut': 'KRR_SB_model'    # str: (Optional), providing a name to save the model at\n",
     "        }\n",
@@ -250,14 +250,14 @@
     "param={ \n",
     "        'QDmodel': 'createQDmodel',     # str: create QD model. The dafault option is useQDmodel\n",
     "        'QDmodelType': 'KRR',           # str: The type of model. Here KRR and the default option is OSTL\n",
-    "        'prepInput' : True,             # str: Prepare input files from the data (Default False)\n",
+    "        'prepInput' : 'True',           # str: Prepare input files from the data (Default False)\n",
     "        'XfileIn': 'x_train',           # str: (Optional, txt file) The prepared X file will be saved at the provided file name \n",
     "        'YfileIn': 'y_train',           # str: (Optional, txt file) The prepared Y file will be saved at the provided file name\n",
     "        'dataPath': 'sb_data/' ,        # str: Data path\n",
     "        'dataCol': 1,                   # int: Default is 1, we may have multiple columns in our data files, mention a single column (KRR model works only for single output)\n",
     "        'dtype': 'real',                # str: Default is real. If the data in complex and if we pass 'real', it will prepare data only for real part and if we pass 'imag' is mentioned, only imaginary data will be considered. \n",
     "        'xlength': 81,                  # int:  Default is 81. Length of the short trajectory which will be used as an input\n",
-    "        'hyperParam': False,            # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default values)\n",
+    "        'hyperParam': 'False',          # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default values)\n",
     "        'krrSigma': 4.0,                # float: If you pass False to hyperParam, then we need to provide a value for hyperparameter Sigma in Gaussian kernel. Otherwise the model will run with the default value. \n",
     "        'krrLamb': 0.00000001,          # float: If you pass False to hyperParam, then we need to provide a value for hyper parameter Lambda in KRR. Otherwise the model will run with the default value.\n",
     "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
@@ -325,10 +325,10 @@
     "param={ \n",
     "        'QDmodel': 'createQDmodel',     # str: create QD model. The dafault option is useQDmodel\n",
     "        'QDmodelType': 'KRR',           # str: The type of model. Here KRR and the default option is OSTL\n",
-    "        'prepInput' : False,             # str: Prepare input files from the data (Default False)\n",
+    "        'prepInput' : 'False',          # str: Prepare input files from the data (Default False)\n",
     "        'XfileIn': 'x_train',           # str: (Optional, txt file) The prepared X file will be saved at the provided file name \n",
     "        'YfileIn': 'y_train',           # str: (Optional, txt file) The prepared Y file will be saved at the provided file name\n",
-    "        'hyperParam': False,            # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default values)\n",
+    "        'hyperParam': 'False',          # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default values)\n",
     "        'krrSigma': 4.0,                # float: If you pass False to hyperParam, then we need to provide a value for hyperparameter Sigma in Gaussian kernel. Otherwise the model will run with the default value. \n",
     "        'krrLamb': 0.00000001,          # float: If you pass False to hyperParam, then we need to provide a value for hyper parameter Lambda in KRR. Otherwise the model will run with the default value.\n",
     "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
