--- a/Jupyter_Notebooks/OSTL_FMO.ipynb
+++ b/Jupyter_Notebooks/OSTL_FMO.ipynb
@@ -119,14 +119,14 @@
     "        'n_states': 8,                  # int:  Number of states (SB) or sites (FMO), default 2 (SB) and 7 (FMO).\n",
     "        'QDmodel': 'createQDmodel',     # str: createQDmodel, the dafault option is useQDmodel\n",
     "        'QDmodelType': 'OSTL',          # str: Type of model. The default option is OSTL\n",
-    "        'prepInput' : True,             # str: Prepare input files from the data (Default False)\n",
+    "        'prepInput' : 'True',           # str: Prepare input files from the data (Default False)\n",
     "        'XfileIn': 'x_data',            # str: (Optional, npy file) The prepared X file will be saved at the provided file name \n",
     "        'YfileIn': 'y_data',            # str: (Optional, npy file) The prepared Y file will be saved at the provided file name \n",
     "        'gammaNorm': 500,               # float: Normalizer for Characteristic frequency. Default value is 500 in the case of FMO complex and 10 in the case of spin-boson model. The same values are also adopted in the provided trained models  \n",
     "        'lambNorm': 520,                # float: Normalizer for System-bath coupling strength. Default value is 520 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models \n",
     "        'tempNorm': 500,                # float: Normalizer for temperature. Default value is 510 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models.\n",
     "        'systemType': 'FMO',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
-    "        'hyperParam': True,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'hyperParam': 'True',           # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
     "        'dataPath': 'fmo_data',         # str: Data path\n",
     "        'QDmodelOut': 'OSTL_FMO_model'  # str: (Optional), providing a name to save the model at\n",
@@ -154,14 +154,14 @@
     "        'n_states': 8,                  # int:  Number of states (SB) or sites (FMO), default 2 (SB) and 7 (FMO).\n",
     "        'QDmodel': 'createQDmodel',     # str: createQDmodel, the dafault option is useQDmodel\n",
     "        'QDmodelType': 'OSTL',          # str: Type of model. The default option is OSTL\n",
-    "        'prepInput' : True,             # str: Prepare input files from the data (Default False)\n",
+    "        'prepInput' : 'True',             # str: Prepare input files from the data (Default False)\n",
     "        'XfileIn': 'x_data',            # str: (Optional, npy file) The prepared X file will be saved at the provided file name \n",
     "        'YfileIn': 'y_data',            # str: (Optional, npy file) The prepared Y file will be saved at the provided file name \n",
     "        'gammaNorm': 500,               # float: Normalizer for Characteristic frequency. Default value is 500 in the case of FMO complex and 10 in the case of spin-boson model. The same values are also adopted in the provided trained models  \n",
     "        'lambNorm': 520,                # float: Normalizer for System-bath coupling strength. Default value is 520 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models \n",
     "        'tempNorm': 500,                # float: Normalizer for temperature. Default value is 510 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models.\n",
     "        'systemType': 'FMO',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
-    "        'hyperParam': False,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'hyperParam': 'False',          # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
     "        'dataPath': 'fmo_data',         # str: Data path\n",
     "        'QDmodelOut': 'OSTL_FMO_model'  # str: (Optional), providing a name to save the model at\n",
@@ -195,7 +195,7 @@
     "        'XfileIn': 'x_data',            # str: (Not Optional, npy file) The X file \n",
     "        'YfileIn': 'y_data',            # str: (Not Optional, npy file) The X file \n",
     "        'systemType': 'FMO',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
-    "        'hyperParam': False,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'hyperParam': 'False',          # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
     "        'QDmodelOut': 'OSTL_FMO_model'  # str: (Optional), providing a name to save the model at\n",
     "        }\n",
