--- a/Jupyter_Notebooks/OSTL_SB.ipynb
+++ b/Jupyter_Notebooks/OSTL_SB.ipynb
@@ -208,19 +208,19 @@
     "        'n_states': 2,                  # int:  Number of states (SB) or sites (FMO), default 2 (SB) and 7 (FMO).\n",
     "        'QDmodel': 'createQDmodel',     # str: createQDmodel, the dafault option is useQDmodel\n",
     "        'QDmodelType': 'OSTL',          # str: Type of model. The default option is OSTL\n",
-    "        'prepInput' : True,             # str: Prepare input files from the data (Default False)\n",
+    "        'prepInput' : 'True',           # str: Prepare input files from the data (Default False)\n",
     "        'XfileIn': 'x_data',            # str: (Optional, npy file) The prepared X file will be saved at the provided file name \n",
     "        'YfileIn': 'y_data',            # str: (Optional, npy file) The prepared Y file will be saved at the provided file name \n",
-    "        'energyNorm': 1.0,                      # float: Normalizer for energy difference. Default value is 1.0 (adopted in the provided trained models)\n",
-    "        'DeltaNorm': 1.0,                       # float: Normalizer for Delta. Default value is 1.0 (adopted in the provided trained models)\n",
-    "        'gammaNorm': 10,               # float: Normalizer for Characteristic frequency. Default value is 500 in the case of FMO complex and 10 in the case of spin-boson model. The same values are also adopted in the provided trained models  \n",
+    "        'energyNorm': 1.0,              # float: Normalizer for energy difference. Default value is 1.0 (adopted in the provided trained models)\n",
+    "        'DeltaNorm': 1.0,               # float: Normalizer for Delta. Default value is 1.0 (adopted in the provided trained models)\n",
+    "        'gammaNorm': 10,                # float: Normalizer for Characteristic frequency. Default value is 500 in the case of FMO complex and 10 in the case of spin-boson model. The same values are also adopted in the provided trained models  \n",
     "        'lambNorm': 1.0,                # float: Normalizer for System-bath coupling strength. Default value is 520 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models \n",
     "        'tempNorm': 1.0,                # float: Normalizer for temperature. Default value is 510 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models.\n",
-    "        'systemType': 'SB',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
-    "        'hyperParam': True,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
+    "        'hyperParam': 'True',           # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
-    "        'dataPath': 'sb_data',         # str: Data path\n",
-    "        'QDmodelOut': 'OSTL_SB_model'  # str: (Optional), providing a name to save the model at\n",
+    "        'dataPath': 'sb_data',          # str: Data path\n",
+    "        'QDmodelOut': 'OSTL_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "quant_dyn(**param)"
    ]
@@ -391,19 +391,19 @@
     "        'n_states': 2,                  # int:  Number of states (SB) or sites (FMO), default 2 (SB) and 7 (FMO).\n",
     "        'QDmodel': 'createQDmodel',     # str: createQDmodel, the dafault option is useQDmodel\n",
     "        'QDmodelType': 'OSTL',          # str: Type of model. The default option is OSTL\n",
-    "        'prepInput' : True,             # str: Prepare input files from the data (Default False)\n",
+    "        'prepInput' : 'True',           # str: Prepare input files from the data (Default False)\n",
     "        'XfileIn': 'x_data',            # str: (Optional, npy file) The prepared X file will be saved at the provided file name \n",
     "        'YfileIn': 'y_data',            # str: (Optional, npy file) The prepared Y file will be saved at the provided file name \n",
     "        'energyNorm': 1.0,              # float: Normalizer for energy difference. Default value is 1.0 (adopted in the provided trained models)\n",
     "        'DeltaNorm': 1.0,               # float: Normalizer for Delta. Default value is 1.0 (adopted in the provided trained models)\n",
-    "        'gammaNorm': 10,               # float: Normalizer for Characteristic frequency. Default value is 500 in the case of FMO complex and 10 in the case of spin-boson model. The same values are also adopted in the provided trained models  \n",
+    "        'gammaNorm': 10,                # float: Normalizer for Characteristic frequency. Default value is 500 in the case of FMO complex and 10 in the case of spin-boson model. The same values are also adopted in the provided trained models  \n",
     "        'lambNorm': 1.0,                # float: Normalizer for System-bath coupling strength. Default value is 520 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models \n",
     "        'tempNorm': 1.0,                # float: Normalizer for temperature. Default value is 510 (FMO complex) and 1 (SB model). The same values are also adopted in the provided trained models.\n",
-    "        'systemType': 'SB',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
-    "        'hyperParam': False,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
+    "        'hyperParam': 'False',          # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
-    "        'dataPath': 'sb_data',         # str: Data path\n",
-    "        'QDmodelOut': 'OSTL_SB_model'  # str: (Optional), providing a name to save the model at\n",
+    "        'dataPath': 'sb_data',          # str: Data path\n",
+    "        'QDmodelOut': 'OSTL_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "quant_dyn(**param)"
    ]
@@ -669,12 +669,12 @@
     "        'n_states': 2,                  # int:  Number of states (SB) or sites (FMO), default 2 (SB) and 7 (FMO).\n",
     "        'QDmodel': 'createQDmodel',     # str: createQDmodel, the dafault option is useQDmodel\n",
     "        'QDmodelType': 'OSTL',          # str: Type of model. The default option is OSTL\n",
-    "        'systemType': 'SB',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
+    "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
     "        'XfileIn': 'x_data',            # str: (Not Optional, npy file) The X file \n",
     "        'YfileIn': 'y_data',            # str: (Not Optional, npy file) The X file\n",
-    "        'hyperParam': False,             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
+    "        'hyperParam': 'False',          # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
-    "        'QDmodelOut': 'OSTL_SB_model'  # str: (Optional), providing a name to save the model at\n",
+    "        'QDmodelOut': 'OSTL_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "quant_dyn(**param)"
    ]
