--- a/Jupyter_Notebooks/KRR_SB.ipynb
+++ b/Jupyter_Notebooks/KRR_SB.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "## Preparation of the training data\n",
     "\n",
-    "Each trajectory is propagated for t= 20 (a.u.) with the time-step 0.05. For training, you can also use a larger time-step t = 0.1 to minize the cost of training. We take the intial dynamics of time-length $t_m$ from each trajectory and then use it an input to predict the dynamics at the next time-step $t_{m+1}$. We include the dynamics at $t_{m-1}$ in the input short-time trajectory (dropping the value at $t_0$ to keep the length of the input the same) and then predict the dynamics at $t_{m+2}$. This process last tills the last time-step. \n",
+    "Each trajectory is propagated for t= 20 (a.u.) with the time-step 0.05. For training, you can also use a larger time-step t = 0.1 to minize the cost of training. We take the intial dynamics of time-length $t_m$ from each trajectory and then use it an input to predict the dynamics at the next time-step $t_{m+1}$. We include the dynamics at $t_{m+1}$ in the input short-time trajectory (dropping the value at $t_0$ to keep the length of the input the same) and then predict the dynamics at $t_{m+2}$. This process last tills the last time-step. \n",
     "\n",
     "\n",
     "![image%20%281%29.png](attachment:image%20%281%29.png)\n",
