--- a/Jupyter_Notebooks/OSTL_SB.ipynb
+++ b/Jupyter_Notebooks/OSTL_SB.ipynb
@@ -219,6 +219,8 @@
     "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
     "        'hyperParam': 'True',           # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
+    "        'epochs': 100,                  # int: Number of epochs for training or optimization\n",
+    "        'max_evals': 100,               # int: Number of maximum evaluations in hyperopt optimization\",
     "        'dataPath': 'sb_data',          # str: Data path\n",
     "        'QDmodelOut': 'OSTL_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
@@ -402,6 +404,7 @@
     "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
     "        'hyperParam': 'False',          # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
+    "        'epochs': 100,                  # int: Number of epochs for training or optimization\n",
     "        'dataPath': 'sb_data',          # str: Data path\n",
     "        'QDmodelOut': 'OSTL_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
@@ -674,6 +677,7 @@
     "        'YfileIn': 'y_data',            # str: (Not Optional, npy file) The X file\n",
     "        'hyperParam': 'False',          # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
+    "        'epochs': 100,                  # int: Number of epochs for training or optimization\n",
     "        'QDmodelOut': 'OSTL_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "quant_dyn(**param)"
