--- a/Jupyter_Notebooks/OSTL_SB.ipynb
+++ b/Jupyter_Notebooks/OSTL_SB.ipynb
@@ -220,7 +220,7 @@
     "        'hyperParam': 'True',           # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
     "        'epochs': 100,                  # int: Number of epochs for training or optimization\n",
-    "        'max_evals': 100,               # int: Number of maximum evaluations in hyperopt optimization\",
+    "        'max_evals': 100,               # int: Number of maximum evaluations in hyperopt optimization\n",
     "        'dataPath': 'sb_data',          # str: Data path\n",
     "        'QDmodelOut': 'OSTL_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
