--- a/Jupyter_Notebooks/AIQD_SB.ipynb
+++ b/Jupyter_Notebooks/AIQD_SB.ipynb
@@ -115,6 +115,8 @@
     "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
     "        'hyperParam': 'True',           # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # Int: Patience for early stopping in CNN training \n",
+    "        'epochs': 100,                  # int: Number of epochs for training or optimization\n",
+    "        'max_evals': 100,               # int: Number of maximum evaluations in hyperopt optimization\n",
     "        'dataPath': 'sb_data',          # str: Data path\n",
     "        'QDmodelOut': 'AIQD_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
@@ -159,6 +161,7 @@
     "        'systemType': 'SB',             # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
     "        'hyperParam': 'False',            # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # Int: Patience for early stopping in CNN training \n",
+    "        'epochs': 100,                  # int: Number of epochs for training or optimization\n",
     "        'dataPath': 'sb_data',          # str: Data path\n",
     "        'QDmodelOut': 'AIQD_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
@@ -192,6 +195,7 @@
     "        'YfileIn': 'y_data',            # str: (Not Optional, npy file) The X file \n",
     "        'hyperParam': 'False',          # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # int: Patience for early stopping in CNN training\n",
+    "        'epochs': 100,                  # int: Number of epochs for training or optimization\n",
     "        'QDmodelOut': 'AIQD_SB_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
     "quant_dyn(**param)"
