--- a/Jupyter_Notebooks/AIQD_FMO.ipynb
+++ b/Jupyter_Notebooks/AIQD_FMO.ipynb
@@ -126,6 +126,8 @@
     "        'systemType': 'FMO',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
     "        'hyperParam': 'True',           # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # Int: Patience for early stopping in CNN training \n",
+    "        'epochs': 100,                  # int: Number of epochs for training or optimization\n",
+    "        'max_evals': 100,               # int: Number of maximum evaluations in hyperopt optimization\n",
     "        'dataPath': 'fmo_data',          # str: Data path\n",
     "        'QDmodelOut': 'AIQD_FMO_model'   # str: (Optional), providing a name to save the model at\n",
     "        }\n",
@@ -168,6 +170,7 @@
     "        'systemType': 'FMO',            # str: (Not optional) Need to define, wether your model is spin-boson (SB) or FMO complex (FMO) \n",
     "        'hyperParam': 'False',          # str: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # Int: Patience for early stopping in CNN training \n",
+    "        'epochs': 100,                  # int: Number of epochs for training or optimization\n",
     "        'dataPath': 'fmo_data',         # str: Data path\n",
     "        'QDmodelOut': 'AIQD_FMO_model'  # str: (Optional), providing a name to save the model at\n",
     "        }\n",
@@ -200,6 +203,7 @@
     "        'YfileIn': 'y_data',            # str: (Not Optional, npy file) The Y file  \n",
     "        'hyperParam': 'False',             # bool: Default is False, we can pass True (optimize the hyperparameters) or False (don't optimize and run with the default structure)\n",
     "        'patience': 10,                 # Int: Patience for early stopping in CNN training\n",
+    "        'epochs': 100,                  # int: Number of epochs for training or optimization\n",
     "        'QDmodelOut': 'AIQD_FMO_model'   # str: (Optional), providing a name to save the model at\n",
     "}\n",
     "quant_dyn(**param)"
