--- a/Jupyter_Notebooks/KRR_SB.ipynb
+++ b/Jupyter_Notebooks/KRR_SB.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "We use the Hierarchical equations of motion (HEOM) approach and generate data for all the possible combinations of the following parameters: $\\epsilon = \\{0, 1\\}$, the reorganization energy $\\lambda \\in \\{0.1$, $0.2$, $0.3$, $0.4$, $0.5$, $0.6$, $0.7$, $0.8$, $0.9$, $1.0 \\},$ the characteristic frequency $\\gamma \\in \\{1$, $2$, $3$, $4$, $5$, $6$, $7$, $8$, $9$, $10\\},$ inverse temperature $\\beta = 1/T \\in \\{0.1$, $0.25$, $0.5$, $0.75$, $1\\}$. It should be noted that all parameters are in atomic units (a.u.). \n",
     "\n",
-    "We generate 500 trajectories for each case (symmetric and asymmetric $\\epsilon = \\{0, 1\\}$) and then train a KRR model on 400 trajectories (keeping 100 trajectories as a test set) for each case. You can grab the trajectories from our **QDDSET-1 dataset** [Coming Soon]. **However, here for the sake of demonstration, we provide few trajectories in the ```examples/sb_data``` folder.** We are also providing the ready made models trained on 400 trajectories for each case. [Coming Soon]"
+    "We generate 500 trajectories for each case (symmetric and asymmetric $\\epsilon = \\{0, 1\\}$) and then train a KRR model on 400 trajectories (keeping 100 trajectories as a test set) for each case. You can grab the trajectories from our **QD3SET-1 dataset** [Coming Soon]. **However, here for the sake of demonstration, we provide few trajectories in the ```examples/sb_data``` folder.** We are also providing the ready made models trained on 400 trajectories for each case. [Coming Soon]"
    ]
   },
   {
