--- a/Jupyter_Notebooks/OSTL_FMO.ipynb
+++ b/Jupyter_Notebooks/OSTL_FMO.ipynb
@@ -69,7 +69,7 @@
     "$$ \tJ_{\\text {env}}(\\omega)=2 \\lambda \\frac{\\omega \\gamma}{\\omega^{2}+\\gamma^{2}},$$\n",
     "where $\\gamma$ and  $\\lambda$ denote the characteristic frequency and the reorganization energy, respectively.\n",
     "\n",
-    "We define a parameter space $\\mathcal{D}$ with $\\lambda, \\gamma$, $T$ as its dimensions. The range of the dimensions are defined as: $\\lambda=\\{10$, $40$, $70$, $\\dots$, $520\\}$cm$^{-1}$, $\\gamma=\\{25$, $50$, $75$, $\\dots$, $500\\}$cm$^{-1}$, $T=\\{30$, $50$, $70$, $\\dots$, $510\\}$K. For each initial excitation case (on site-1,6 and 8), we generate 500 trajectories where the parameters were chosen based on farthest point sampling. We use the local thermalising Lindblad master equation (LTLME) to generate our data. You can also get HEOM trajectories from our QDDSET-1 data set.\n",
+    "We define a parameter space $\\mathcal{D}$ with $\\lambda, \\gamma$, $T$ as its dimensions. The range of the dimensions are defined as: $\\lambda=\\{10$, $40$, $70$, $\\dots$, $520\\}$cm$^{-1}$, $\\gamma=\\{25$, $50$, $75$, $\\dots$, $500\\}$cm$^{-1}$, $T=\\{30$, $50$, $70$, $\\dots$, $510\\}$K. For each initial excitation case (on site-1,6 and 8), we generate 500 trajectories where the parameters were chosen based on farthest point sampling. We use the local thermalising Lindblad master equation (LTLME) to generate our data. You can also get HEOM trajectories from our QD3SET-1 data set.\n",
     "\n",
     "More are here \n",
     "\n",
